--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,22 @@
   text-align: center;
 }
 
+#result{
+  color: grey;
+  width: 200px;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.calcButtons{
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  width: 250px;
+  flex-wrap: wrap;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
